--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
         }
         button {
             padding: 10px 15px;
-            background-color: #4CAF50;
+            background-color: #FF69B4;
             color: white;
             border: none;
             cursor: pointer;
